<resources>
    <string name="app_name">Lấy mẫu</string>
    <string name="action_settings">Thiết lập</string>
    <string name="title_activity_login">Đăng nhập</string>
    <string name="title_activity_register">Đăng ký</string>
    <string name="error_incorrect_password">Mật khẩu không hợp lệ</string>
    <string name="error_field_required">Yêu cầu nhập thông tin</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Mật khẩu quá ngắn. Ít nhất 4 ký tự</string>
    <string name="action_register">Đăng ký</string>
    <string name="prompt_url">Nhập máy chủ (url)</string>
    <string name="prompt_user">Tên đăng nhập</string>
    <string name="prompt_password">Mật khẩu</string>
    <string name="action_sign_in_short">Đăng nhập</string>
    <string name="add">Thêm</string>
    <string name="title_activity_upload">Tài liệu</string>
    <string name="btnRecordVideo">Thu video</string>
    <string name="or">(hoặc)</string>
    <string name="btnTakePicture">Chụp ảnh</string>
    <string name="btnUploadToServer">Tải lên</string>
    <string name="document_name">Tên tài liệu</string>
    <string name="btnLibrary">Thư viện</string>
    <string name="action_logout">Thoát</string>
    <string name="title_activity_pickup">Thiết lập mã</string>
    <string name="scan">Quét mã vạch</string>
    <string name="title_activity_scan_barcode">Quét mã vạch</string>
    <string name="title_activity_document_image">Hình ảnh</string>
    <string name="title_activity_document_pdf">Pdf</string>
    <string name="title_activity_document_video_view">Phim</string>
    <string name="action_getdata">Lấy công việc</string>
    <string name="nav_header_desc"></string>
    <string name="nav_header_title">ĐẶNG NHẬP HỆ THỐNG</string>
    <string name="action_login">Đăng nhập</string>
    <string name="title_activity_signature">Tạo chữ ký</string>
    <string name="action_signature">Chữ ký</string>
    <string name="upload_image">Upload</string>
</resources>
